// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RatingStars /> renders with value of 0 1`] = `
<div
  aria-hidden={true}
  className="tss-p4e9kp-container"
  data-test-id="ratedStars: 0"
>
  <div
    className="tss-ckws8t-emptyStars rating-stars-empty"
  >
    <div
      className="tss-1aman2z-icon-iconSmall"
      key="1"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="tss-1aman2z-icon-iconSmall"
      key="2"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="tss-1aman2z-icon-iconSmall"
      key="3"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="tss-1aman2z-icon-iconSmall"
      key="4"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="tss-1aman2z-icon-iconSmall"
      key="5"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
  </div>
  <div
    className="tss-1a3jay-filledStars rating-stars-filled"
  />
</div>
`;

exports[`<RatingStars /> renders with value of 50 1`] = `
<div
  aria-hidden={true}
  className="tss-p4e9kp-container"
  data-test-id="ratedStars: 2.5"
>
  <div
    className="tss-ckws8t-emptyStars rating-stars-empty"
  >
    <div
      className="tss-1aman2z-icon-iconSmall"
      key="1"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="tss-1aman2z-icon-iconSmall"
      key="2"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="tss-1aman2z-icon-iconSmall"
      key="3"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="tss-1aman2z-icon-iconSmall"
      key="4"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="tss-1aman2z-icon-iconSmall"
      key="5"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
  </div>
  <div
    className="tss-1a3jay-filledStars rating-stars-filled"
  >
    <div
      className="tss-1aman2z-icon-iconSmall"
      key="6"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="tss-1aman2z-icon-iconSmall"
      key="7"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="tss-1aman2z-icon-iconSmall"
      key="2"
    >
      <StarHalfIcon
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
  </div>
</div>
`;

exports[`<RatingStars /> renders with value of 100 1`] = `
<div
  aria-hidden={true}
  className="tss-p4e9kp-container"
  data-test-id="ratedStars: 5"
>
  <div
    className="tss-ckws8t-emptyStars rating-stars-empty"
  >
    <div
      className="tss-1aman2z-icon-iconSmall"
      key="1"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="tss-1aman2z-icon-iconSmall"
      key="2"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="tss-1aman2z-icon-iconSmall"
      key="3"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="tss-1aman2z-icon-iconSmall"
      key="4"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="tss-1aman2z-icon-iconSmall"
      key="5"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
  </div>
  <div
    className="tss-1a3jay-filledStars rating-stars-filled"
  >
    <div
      className="tss-1aman2z-icon-iconSmall"
      key="6"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="tss-1aman2z-icon-iconSmall"
      key="7"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="tss-1aman2z-icon-iconSmall"
      key="8"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="tss-1aman2z-icon-iconSmall"
      key="9"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="tss-1aman2z-icon-iconSmall"
      key="10"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
  </div>
</div>
`;

exports[`<RatingStars /> should change rating on click 1`] = `
<div
  aria-hidden={true}
  className="tss-p4e9kp-container"
  data-test-id="ratedStars: 5"
>
  <div
    className="tss-ckws8t-emptyStars rating-stars-empty"
  >
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="tss-1aman2z-icon-iconSmall"
      key="1"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="tss-1aman2z-icon-iconSmall"
      key="2"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="tss-1aman2z-icon-iconSmall"
      key="3"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="tss-1aman2z-icon-iconSmall"
      key="4"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="tss-1aman2z-icon-iconSmall"
      key="5"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
  </div>
  <div
    className="tss-1a3jay-filledStars rating-stars-filled"
  >
    <div
      aria-hidden={true}
      className="tss-1aman2z-icon-iconSmall"
      key="6"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      aria-hidden={true}
      className="tss-1aman2z-icon-iconSmall"
      key="7"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      aria-hidden={true}
      className="tss-1aman2z-icon-iconSmall"
      key="8"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      aria-hidden={true}
      className="tss-1aman2z-icon-iconSmall"
      key="9"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      aria-hidden={true}
      className="tss-1aman2z-icon-iconSmall"
      key="10"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
  </div>
</div>
`;

exports[`<RatingStars /> should change rating on click 2`] = `
<div
  aria-hidden={true}
  className="tss-p4e9kp-container"
  data-test-id="ratedStars: 3.5"
>
  <div
    className="tss-ckws8t-emptyStars rating-stars-empty"
  >
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="tss-1aman2z-icon-iconSmall"
      key="1"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="tss-1aman2z-icon-iconSmall"
      key="2"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="tss-1aman2z-icon-iconSmall"
      key="3"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="tss-1aman2z-icon-iconSmall"
      key="4"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      aria-label="reviews.press_to_rate_with_x_stars"
      className="tss-1aman2z-icon-iconSmall"
      key="5"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
  </div>
  <div
    className="tss-1a3jay-filledStars rating-stars-filled"
  >
    <div
      aria-hidden={true}
      className="tss-1aman2z-icon-iconSmall"
      key="6"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      aria-hidden={true}
      className="tss-1aman2z-icon-iconSmall"
      key="7"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      aria-hidden={true}
      className="tss-1aman2z-icon-iconSmall"
      key="8"
      onClick={[Function]}
      role="button"
    >
      <Star
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
    <div
      className="tss-1aman2z-icon-iconSmall"
      key="3"
    >
      <StarHalfIcon
        className=""
        color={null}
        size="1em"
        viewBox="0 0 24 24"
      />
    </div>
  </div>
</div>
`;
